--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,19 @@
-// TODO
+.pagination {
+  position: absolute;
+  width: 180px;
+  height: 22px;
+  left: 368px;
+  top: 966px;
+
+  a {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+
+    text-align: justify;
+    color: #FF57B2;
+  }
+
+}
