--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,137 @@
-// TODO
+.banner {
+  position: absolute;
+  width: 100%;
+  height: 400px;
+  left: 0px;
+  right: 0px;
+  top: 150px;
+}
+
+.container {
+  position: absolute;
+  width: 721px;
+  height: 2108px;
+  left: 349px;
+  top: 585px;
+
+  .post {
+    padding: 10px;
+    padding-bottom: 2rem;
+    h1 {
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 48px;
+      line-height: 58px;
+      /* identical to box height */
+
+      letter-spacing: -0.5px;
+      color: var(--Heading);
+    }
+    p {
+      left: 0%;
+      right: 28.57%;
+      top: 38.89%;
+      bottom: 40.74%;
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 22px;
+      /* identical to box height */
+      text-align: justify;
+      /* Body */
+      color: var(--Body);
+
+      padding-top: 1rem;
+    }
+    .info {
+      left: 0%;
+      right: 62.43%;
+      top: 81.48%;
+      bottom: 0%;
+      display: flex;
+      flex-direction: row;
+      padding-top: 2rem;
+        .createdAt {
+          left: 4%;
+          right: 84.43%;
+          top: 82.41%;
+          bottom: 1.85%;
+          span {
+            font-family: 'Inter';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 17px;
+            color: #BBBBBB;
+            padding-left: 1rem;
+          }
+        }
+        .author {
+          left: 23%;
+          right: 62.43%;
+          top: 82.41%;
+          bottom: 1.85%;
+          padding-left: 2rem;
+          span {
+            font-family: 'Inter';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 17px;
+            color: #BBBBBB;
+            padding-left: 1rem;
+          }
+        }
+        .time {
+          left: 23%;
+          right: 62.43%;
+          top: 82.41%;
+          bottom: 1.85%;
+          padding-left: 2rem;
+          span {
+            font-family: 'Inter';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 17px;
+            color: #BBBBBB;
+            padding-left: 1rem;
+          }
+        }
+    }
+  }
+
+  .content {
+    width: 700px;
+    height: 1942px;
+    left: 370px;
+    top: 751px;
+    padding-top: 1rem;
+
+    h2 {
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 140%;
+      color: var(--Heading);
+      padding-top: 2rem;
+    }
+
+    p {
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 140%;
+      /* or 25px */
+
+      text-align: justify;
+      color: var(--Heading);
+    }
+  }
+
+}
+
