--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,45 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --highlight: #FF57B2;
+  --Heading: #F8F8F8;
+  --Background: #1A1D23;
+  --Info: #BBBBBB;
+  --Body: #D7D7D7;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--Background);
+  color: var(--white);
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem "Roboto", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
